# bitenum

./: .gitignore  Cargo.toml
mzsh-commandenum/: Cargo.toml
mzsh-commandenum/tests/: test_commandenum.rs
mzsh-commandenum_macros/: Cargo.toml
mzsh-commandenum_macros/src/: lib.rs
src/: lib.rs
tests/: test_bitenum.rs  test_commandenum.rs
