[package]
name = "mzsh-bitenum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {features = ["derive"]}
serde_json = {}
int-enum = {}
bincode = { git = "ssh://git@github.com/bincode-org/bincode.git", version = "2.0.0-rc.3" }
num = { version="0.4.1" }
bitflags = { version="2.4.1" }
bincode-aligned = { git = "ssh://git@github.com/mzoworka/bincode-aligned.git" }
